content/v1.4/Introduction/tutorials.md
---
title: "Tutorials"
slug: "tutorials"
hidden: false
createdAt: "2020-11-20T17:16:06.717Z"
updatedAt: "2020-12-21T11:56:21.966Z"
---
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/4fb5856-a9d5ff5-a4c6c80-85d09b6-19facd8-banner.png",
        "a9d5ff5-a4c6c80-85d09b6-19facd8-banner.png",
        3246,
        731,
        "#f7f8fd"
      ]
    }
  ]
}
[/block]
We've compiled a series of tutorials designed to teach the basics of smart contracts and how to use them to consume data from the Chainlink oracle ecosystem. 

#Beginners

If you're new to smart contract development this is a great place to start. We walk you through developing your first smart contract that interacts with Chainlink.

Try out the [Beginners Tutorial](doc:beginners-tutorial).

# Intermediates

Randomness is very difficult to generate on blockchains. The reason for this is because every node must come to the same conclusion, forming a consensus. [Chainlink VRF](doc:chainlink-vrf) solves this by allowing smart contracts to consume random numbers.

Try out the [Intermediates Tutorial](doc:intermediates-tutorial) on consuming random numbers in smart contracts.