content/v1.6/Introduction/tutorials.md
---
title: "Tutorials"
slug: "tutorials"
hidden: false
createdAt: "2020-11-20T17:16:06.717Z"
updatedAt: "2021-03-12T13:40:53.570Z"
---
[block:callout]
{
  "type": "success",
  "title": "Join the Spring 2021 Chainlink Hackathon!",
  "body": "This March, you have the chance to help build the next generation of smart contracts.\n\nThe Chainlink Spring Hackathon has a prize pot of over $80k+ and is sponsored by some of the most prominent crypto projects.\n\nMarch 15th - April 11th\n<a href=\"https://chain.link/hackathon?utm_source=chainlink&utm_medium=developer-docs&utm_campaign=hackathon\" target=\"_blank\"><b>Register Here.</b></a>"
}
[/block]

[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/4fb5856-a9d5ff5-a4c6c80-85d09b6-19facd8-banner.png",
        "a9d5ff5-a4c6c80-85d09b6-19facd8-banner.png",
        3246,
        731,
        "#f7f8fd"
      ]
    }
  ]
}
[/block]
We've compiled a series of tutorials designed to teach smart contracts basics and how to use them to consume data from the Chainlink oracle ecosystem. 

#Beginners

If you're new to smart contract development, this is a great place to start. We walk you through developing your first smart contract that interacts with Chainlink.

Try out the [Beginners Tutorial](doc:beginners-tutorial).

# Intermediates

Randomness is very difficult to generate on blockchains. The reason for this is because every node must come to the same conclusion, forming a consensus. [Chainlink VRF](doc:chainlink-vrf) solves this by allowing smart contracts to consume random numbers.

Try out the [Intermediates Tutorial](doc:intermediates-tutorial) on consuming random numbers in smart contracts.

# Advanced

Learn more about how the Chainlink Request and Receive cycle works under the hood, and how you can utilise this powerful software to feed data to your smart contracts.

Try the [Advanced tutorial](doc:advanced-tutorial).